# caffe

./: Makefile.config.example
include/caffe/: solver.hpp
mytest/: CMakeLists.txt  README.md  main.cpp  mytest.pro  scpfile.sh
mytest/caffe_src/include/caffe/: solver.hpp
mytest/include/: blob_by_channel.h  blob_by_filter.h  blob_by_kernel.h  cpu_only.h  helper_functions.hpp  layer_set.h  myblob.h  myblob_factory.h  mylayer.h  mynet.h  mysolver.h
mytest/scripts/: finetune.sh  finetune_all.sh  test_all.sh
mytest/src/: blob_by_channel.cpp  blob_by_filter.cpp  blob_by_kernel.cpp  myblob.cpp  mylayer.cpp  mynet.cpp  mysolver.cpp
mytest/test/: display_weights.cpp  test_MyNet.cpp
